--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Simple PHP wrapper around Animate.css",
     "keywords": [
         "Animate.css",
-        "anmations"
+        "Animations"
     ],
     "license": "MIT",
     "authors": [
